[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icons/icon-benchmark-severity-4.svg" type="Texture" id=1]
[ext_resource path="res://components/benchmark_display/severity_indicator.gd" type="Script" id=2]

[node name="SeverityIndicator" type="Control"]
margin_right = 80.0
margin_bottom = 26.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_top = 10.0
margin_bottom = 30.0
size_flags_horizontal = 8
align = 2

[node name="SeverityTexture" type="TextureRect" parent="."]
modulate = Color( 0.956863, 0.266667, 0.266667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 20, 10 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[connection signal="mouse_entered" from="SeverityTexture" to="." method="_on_SeverityTexture_mouse_entered"]
[connection signal="mouse_exited" from="SeverityTexture" to="." method="_on_SeverityTexture_mouse_exited"]
